tests/strict_local_mode/strict_local_mode.exp
Error ----------------------------------------------------------------------------------------------------- test.js:3:15

Importing a type from an untyped module makes it `any` and is not safe! Did you mean to add `// @flow` to the top of
`./import`? (`untyped-type-import`)

   3| import type { T } from './import'; // Error: untyped-type-import
                    ^


Error ------------------------------------------------------------------------------------------------------ test.js:9:3

Cannot reassign constant `x` [1].

   test.js:9:3
   9|   x = 1; // Error: cannot reassign constant parameter
        ^

References:
   test.js:8:12
   8| function f(x) {
                 ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:12:10

Unclear type. Using `any`, `Object`, or `Function` types is not safe! (`unclear-type`)

   12| const x: any = {}; // Error: unclear-type
                ^^^



Found 3 errors
